Editor now supports undo/redo for modified GameObject properties

--- a/SpearGame/DefaultImgui.ini
+++ b/SpearGame/DefaultImgui.ini
@@ -1,128 +1,55 @@
+[Window][WindowOverViewport_11111111]
+Pos=0,25
+Size=3840,2040
+Collapsed=0
+
+[Window][Details]
+Pos=3192,25
+Size=648,1404
+Collapsed=0
+DockId=0x00000007,0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Dear ImGui Demo]
-Pos=689,340
-Size=995,397
-Collapsed=0
-
-[Window][Demo Window]
-Pos=206,152
-Size=550,32
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Settings]
-Pos=928,311
-Size=600,300
-Collapsed=0
-
-[Window][Frame Profiler]
-Pos=487,241
-Size=900,600
-Collapsed=0
-
-[Window][Raycaster]
-Pos=362,483
-Size=600,388
-Collapsed=0
-
-[Window][Window]
-Pos=2053,25
-Size=507,1468
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Example: Assets Browser]
-Pos=1,1151
-Size=2558,336
-Collapsed=0
-
-[Window][Dear ImGui Debug Log]
-Pos=60,60
-Size=721,501
-Collapsed=0
-
-[Window][Example: Documents]
-ViewportPos=1123,82
-ViewportId=0x908C3843
-Size=868,1522
-Collapsed=0
-
-[Window][DockSpace Demo]
+[Window][Editor]
 Pos=0,25
-Size=2560,1468
-Collapsed=0
-
-[Window][Example: Log]
-Pos=60,60
-Size=500,400
-Collapsed=0
-
-[Window][Delete?]
-Pos=1051,679
-Size=458,135
-Collapsed=0
-
-[Window][Stacked 1]
-Pos=1539,301
-Size=605,222
-Collapsed=0
-
-[Window][Stacked 2]
-Pos=1720,474
-Size=332,118
-Collapsed=0
-
-[Window][New Level]
-Pos=1075,638
-Size=353,135
-Collapsed=0
-
-[Window][Create New Level]
-Pos=937,585
-Size=437,141
-Collapsed=0
-
-[Window][Open Level]
-Pos=1054,632
-Size=353,135
-Collapsed=0
-
-[Window][Save As...]
-Pos=1061,699
-Size=437,95
-Collapsed=0
-
-[Window][Toolbar]
-Pos=0,25
-Size=2560,93
+Size=529,1456
 Collapsed=0
 DockId=0x00000005,0
 
-[Window][Docked Window]
-Pos=1091,328
-Size=631,336
+[Window][Show-In-Editor Flags]
+Pos=0,1483
+Size=529,582
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][History]
+Pos=3192,1431
+Size=648,634
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Raycaster]
+Pos=60,60
+Size=600,400
 Collapsed=0
 
-[Window][WindowOverViewport_11111111]
-Pos=0,25
-Size=2560,1468
+[Window][Frame Profiler]
+Pos=60,60
+Size=900,600
 Collapsed=0
-
-[Table][0xB6880529,2]
-RefScale=19.5
-Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=0,59 Size=2560,1468 Split=Y
-  DockNode    ID=0x00000005 Parent=0x08BD597D SizeRef=2560,93 Selected=0x0C01D6D5
-  DockNode    ID=0x00000006 Parent=0x08BD597D SizeRef=2560,1373 Split=X
-    DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=2051,1468 CentralNode=1
-    DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=507,1468 Selected=0xED2F5BAD
-DockSpace     ID=0xC0DFADC4 Pos=0,84 Size=2560,1442 Split=Y
-  DockNode    ID=0x00000004 Parent=0xC0DFADC4 SizeRef=2560,790 CentralNode=1
-  DockNode    ID=0x00000001 Parent=0xC0DFADC4 SizeRef=2560,650
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,59 Size=3840,2040 Split=X
+  DockNode      ID=0x00000003 Parent=0x08BD597D SizeRef=529,2040 Split=Y Selected=0x16C77061
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=160,1456 Selected=0xDF0EC458
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=160,582 Selected=0x16C77061
+  DockNode      ID=0x00000004 Parent=0x08BD597D SizeRef=3309,2040 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=2659,2040 CentralNode=1
+    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=648,2040 Split=Y Selected=0x893C342E
+      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=648,1404 Selected=0x893C342E
+      DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=648,634 Selected=0x344D3274
 
